--- a/Scorpion/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/Scorpion/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,23 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="108dp" android:viewportHeight="36" android:viewportWidth="36" android:width="108dp">
+      
+    <path android:fillColor="#583529" android:pathData="m18.318,23.077c-0.252,1.306 0.933,2.749 0.933,2.749 0,0 -0.229,-1.703 0.436,-2.57 0.458,-0.598 0.134,-1.259 -0.244,-1.309 -0.378,-0.049 -0.982,0.395 -1.124,1.13z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#583529" android:pathData="m16.645,23.118c-1.363,1 -2.668,0.404 -3.322,-0.573 -0.653,-0.978 -1.341,-0.419 -0.693,0.639 0.648,1.057 2.608,2.63 4.958,0.841 1.784,-1.356 -0.518,-1.219 -0.944,-0.907z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#7c533e" android:pathData="m13.409,22.92c-0.848,1.183 -3.092,0.899 -3.959,-1.067 -0.838,-1.901 -0.186,-3.631 0.25,-4.166 0.178,-0.218 -0.277,2.555 1.209,3.319 0.651,0.334 -1.322,-1.804 -0.376,-3.786 0.284,-0.595 -0.026,2.01 1.764,2.758 0.781,0.326 2.355,1.211 1.111,2.944zM14.855,20.651c0.321,-0.4 0.887,-0.825 4.595,-0.825 2.771,0 3.557,-1.283 4.48,-1.603 3.156,-1.094 2.031,6.238 -3.229,6.238 -5.26,0.001 -6.278,-3.274 -5.846,-3.81z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#7c533e" android:pathData="m20.725,19.721c3.453,-0.568 4.342,-4.6 3.196,-6.678 -1.076,-1.95 -3.774,-2.865 -6.03,-1.039 0.086,0.546 0.273,2.986 -1.806,3.282 0.663,-1.334 -1.372,-2.322 -0.754,-4.052 0.62,-1.73 2.301,-1.315 2.445,-0.866 1.707,-1.35 3.914,-1.483 4.775,-0.642 2.566,0.022 4.17,1.717 4.169,2.963 1.48,1.449 0.742,5.028 0.122,5.423 0.277,2.141 -0.357,4.116 -2.764,4.8 -0.416,0.118 -6.442,-2.683 -3.354,-3.191z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#af7e57" android:pathData="m17.936,22.622c-0.573,0.918 -1.594,1.281 -2.58,1.168 -1.341,-0.152 -1.346,0.842 0.063,1.057 0.81,0.123 2.091,0.006 3.046,-0.756 1.215,-0.971 -0.199,-2.001 -0.529,-1.469z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#af7e57" android:pathData="m15.75,23.99c0.431,1.584 -1.45,3.296 -3.824,2.607C9.632,25.931 8.573,24.118 8.416,23.356 8.353,23.046 10.479,25.449 12.236,24.734 13.005,24.421 9.676,24.551 8.607,22.303 8.286,21.63 10.368,23.787 12.332,22.801 13.19,22.37 15.117,21.668 15.75,23.99Z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#292f33" android:pathData="m17.424,21.125a0.689,0.677 0,1 1,-1.379 0,0.689 0.677,0 0,1 1.379,0z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#af7e57" android:pathData="m24.817,22.637c0.772,1.092 0.287,2.884 0.287,2.884 0,0 -0.496,-1.648 -1.462,-2.174 -0.666,-0.364 -0.643,-1.097 -0.319,-1.294 0.325,-0.196 1.061,-0.031 1.495,0.584zM23.278,23.475c0.602,1.191 -0.143,2.894 -0.143,2.894 0,0 -0.247,-1.701 -1.125,-2.359 -0.605,-0.454 -0.475,-1.177 -0.124,-1.325 0.35,-0.148 1.054,0.12 1.393,0.79zM21.504,24.051c0.253,1.306 -0.933,2.749 -0.933,2.749 0,0 0.229,-1.703 -0.436,-2.57 -0.458,-0.598 -0.134,-1.259 0.244,-1.309 0.379,-0.049 0.983,0.395 1.124,1.13z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#583529" android:pathData="m24.146,16.666c-0.124,-0.007 -0.622,0.892 -0.585,1.074 0.122,0.601 2.624,0.678 3.282,0.373 0.49,-0.227 0.748,-1.354 0.682,-1.873 -1.094,0.531 -3.103,0.442 -3.378,0.427zM26.074,11.206c-0.112,0.552 -1.582,1.522 -2.239,1.666 -0.102,0.022 0.209,0.794 0.381,0.894 0.173,0.101 2.409,-0.541 2.504,-1.078 0.053,-0.3 -0.124,-1.187 -0.645,-1.483zM22.551,9.726c-0.001,-0.12 -0.424,-0.54 -1.134,-0.494 0.229,0.784 -0.219,1.538 -0.44,1.812 -0.074,0.091 0.783,0.27 0.912,0.228 0.231,-0.075 0.664,-0.937 0.662,-1.546z" android:strokeWidth="0.53569"/>
+      
+    <path android:fillColor="#292f33" android:pathData="m17.873,10.367c-0.293,-0.582 -1.307,-0.763 -2.05,-0.033 -0.743,0.73 -0.89,1.681 -0.428,2.632 0.462,0.951 1.002,1.56 0.574,2.389 1.104,-0.144 1.773,-1.167 1.96,-1.681 0.338,-0.928 0.406,-2.388 -0.056,-3.306z" android:strokeWidth="0.53569"/>
+    
 </vector>
