Made tray edge wider

--- a/Scorpion/app/src/main/res/drawable/card_tray.xml
+++ b/Scorpion/app/src/main/res/drawable/card_tray.xml
@@ -1,17 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="262dp"
-    android:height="361dp"
-    android:viewportWidth="69.321"
-    android:viewportHeight="95.515">
+    android:width="318dp"
+    android:height="417dp"
+    android:viewportWidth="84.14"
+    android:viewportHeight="110.33">
   <path
-      android:pathData="M3.704,3.704h61.912v88.106h-61.912z"
+      android:pathData="M11.11,11.11h61.91v88.11h-61.91z"
       android:strokeWidth="0.131756">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:centerX="33.326"
-          android:centerY="138.97"
-          android:gradientRadius="52.312"
+          android:centerX="40.73"
+          android:centerY="146.38"
+          android:gradientRadius="52.31"
           android:tileMode="clamp"
           android:type="radial">
         <item android:offset="0" android:color="#FF917F29"/>
@@ -20,81 +20,81 @@
     </aapt:attr>
   </path>
   <path
-      android:pathData="M4.116,4.06 L0,0V95.515L4.06,91.435Z"
-      android:strokeWidth="0.131756">
+      android:pathData="M11.11,11.11 L0,0V110.6L11.11,99.22Z"
+      android:strokeWidth="0.124996">
     <aapt:attr name="android:fillColor">
       <gradient 
           android:startX="0"
-          android:startY="47.757"
-          android:endX="4.116"
-          android:endY="47.757"
+          android:startY="47.76"
+          android:endX="10.93"
+          android:endY="47.76"
           android:type="linear">
         <item android:offset="0" android:color="#FF685B1E"/>
-        <item android:offset="0.162" android:color="#FF9B882C"/>
-        <item android:offset="0.326" android:color="#FFBAA317"/>
+        <item android:offset="0.16" android:color="#FF9B882C"/>
+        <item android:offset="0.33" android:color="#FFBAA317"/>
         <item android:offset="0.5" android:color="#FFCFB53B"/>
         <item android:offset="0.67" android:color="#FFBAA317"/>
-        <item android:offset="0.865" android:color="#FF9B882C"/>
+        <item android:offset="0.86" android:color="#FF9B882C"/>
         <item android:offset="1" android:color="#FF685B1E"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
-      android:pathData="M4.116,4.06 L0,0h69.321l-4.082,4.004z"
+      android:pathData="M11.11,11.11 L0,0h84.14l-11.11,11.11z"
       android:strokeWidth="0.131756">
     <aapt:attr name="android:fillColor">
       <gradient 
           android:startX="34.65"
-          android:startY="0.083"
-          android:endX="34.616"
-          android:endY="4.032"
+          android:startY="0.08"
+          android:endX="34.5"
+          android:endY="11.04"
           android:type="linear">
         <item android:offset="0" android:color="#FF685B1E"/>
-        <item android:offset="0.162" android:color="#FF9B882C"/>
-        <item android:offset="0.326" android:color="#FFBAA317"/>
+        <item android:offset="0.16" android:color="#FF9B882C"/>
+        <item android:offset="0.33" android:color="#FFBAA317"/>
         <item android:offset="0.5" android:color="#FFCFB53B"/>
         <item android:offset="0.67" android:color="#FFBAA317"/>
-        <item android:offset="0.865" android:color="#FF9B882C"/>
+        <item android:offset="0.86" android:color="#FF9B882C"/>
         <item android:offset="1" android:color="#FF685B1E"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
-      android:pathData="m69.321,0 l-4.193,4.06 0.167,87.319 4.026,4.135z"
+      android:pathData="M84.14,0 L73.03,11.11v88.11l11.11,11.11z"
       android:strokeWidth="0.131756">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startX="65.128"
-          android:startY="47.757"
-          android:endX="69.321"
-          android:endY="47.757"
+          android:startX="72.83"
+          android:startY="47.76"
+          android:endX="84.14"
+          android:endY="47.76"
           android:type="linear">
         <item android:offset="0" android:color="#FF685B1E"/>
-        <item android:offset="0.162" android:color="#FF9B882C"/>
-        <item android:offset="0.326" android:color="#FFBAA317"/>
+        <item android:offset="0.16" android:color="#FF9B882C"/>
+        <item android:offset="0.33" android:color="#FFBAA317"/>
         <item android:offset="0.5" android:color="#FFCFB53B"/>
         <item android:offset="0.67" android:color="#FFBAA317"/>
-        <item android:offset="0.865" android:color="#FF9B882C"/>
+        <item android:offset="0.86" android:color="#FF9B882C"/>
         <item android:offset="1" android:color="#FF685B1E"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
-      android:pathData="M69.321,95.515 L65.128,91.268 4.116,91.435 0,95.515Z"
+      android:pathData="M84.14,110.33 L73.03,99.22H11.11L0,110.33Z"
       android:strokeWidth="0.131756">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startX="34.761"
-          android:startY="91.278"
-          android:endX="34.727"
-          android:endY="95.449"
+          android:startX="34.65"
+          android:startY="99.09"
+          android:endX="34.73"
+          android:endY="110.27"
           android:type="linear">
         <item android:offset="0" android:color="#FF685B1E"/>
-        <item android:offset="0.162" android:color="#FF9B882C"/>
-        <item android:offset="0.326" android:color="#FFBAA317"/>
+        <item android:offset="0.13" android:color="#FF9B882C"/>
+        <item android:offset="0.33" android:color="#FFBAA317"/>
         <item android:offset="0.5" android:color="#FFCFB53B"/>
         <item android:offset="0.67" android:color="#FFBAA317"/>
-        <item android:offset="0.865" android:color="#FF9B882C"/>
+        <item android:offset="0.86" android:color="#FF9B882C"/>
         <item android:offset="1" android:color="#FF685B1E"/>
       </gradient>
     </aapt:attr>
