Removed double tap from Pyramid game
I added a Deal button to deal cards from the waste to stock groups, and added code to move cards from the stock to waste with a fling.

I also changed the deal count so the first one isn't counted.

I added a variant where the card on the stock pile is immediately moved to the waste when it is turned face up.

I changed the drag logic to use draggable2D so I can get the ending velocity to handle the fling.

I fixed or ignored several warnings.

--- a/Scorpion/app/src/main/res/drawable/card_tray.xml
+++ b/Scorpion/app/src/main/res/drawable/card_tray.xml
@@ -1,9 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="318dp"
     android:height="417dp"
     android:viewportWidth="84.14"
-    android:viewportHeight="110.33">
+    android:viewportHeight="110.33"
+    tools:ignore="VectorRaster">
   <path
       android:pathData="M11.11,11.11h61.91v88.11h-61.91z"
       android:strokeWidth="0.131756">
